# log-analyzer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  knope.toml
.changeset/: add-plugin-support.md  cli-enhancements.md  comparison-filter-output-fixes.md  config-profiles-and-skill-templates.md  diff-display-improvements.md  embedded-config-generator-templates.md  errors-command.md  extract-command.md  filter-expression-syntax.md  generate-config-multi-file.md  generic-base-and-preset.md  improve-installation-workflow.md  multi-file-info-perf.md  output-formatting-improvements.md  rust-tracing-parser.md  search-command.md  session-insights-profile.md  session-level-only-config.md  trace-command.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
config/profiles/: base.toml
config/templates/: custom-start.toml  event-pipeline.toml  service-api.toml
scripts/: install-skill.sh  install.sh
src/: cli.rs  comparator.rs  config.rs  config_generator.rs  errors.rs  extract.rs  lib.rs  llm_processor.rs  main.rs  parser.rs  search.rs  trace.rs
src/cli/: direction.rs
src/comparator/: console_cmp.rs  console_summary.rs  display_comparison.rs  display_summary.rs  entities.rs  file_cmp.rs  format_cmp.rs  helpers.rs  json_cmp.rs  write_comparison.rs
src/filter/: mod.rs  (+3 more)
tests/: test_comparator.rs  test_config_generator.rs  test_config_profiles.rs  test_log_filter.rs  test_parser.rs  test_perf_analyzer.rs  test_regressions_cli.rs  test_regressions_compare.rs  test_regressions_filter.rs
(+12 files in other folders)
