[package]
name = "log-analyzer"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
similar = "2.7"
json5 = "1.3"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.2"
regex = "1.11"
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.24"
